Change to Java 15 preview and other improvements
Add `DeletePageCommand`
Update jwiki
Add `DebugOnlyCommand` annotation
Change confirmation contexts and other POJOs to be records
Fix bugs in `CachedMap` and create `CachedData`
Delete old unused commands