@@ -20,14 +20,13 @@
  * SOFTWARE.
  */
 
-package me.sizableshrimp.jsb.commands.utility;
+package me.sizableshrimp.jsb.commands.utility.page;
 
 import discord4j.core.event.domain.message.MessageCreateEvent;
 import discord4j.core.object.entity.Message;
 import me.sizableshrimp.jsb.api.CommandContext;
 import me.sizableshrimp.jsb.api.CommandInfo;
 import me.sizableshrimp.jsb.api.ConfirmationCommand;
-import me.sizableshrimp.jsb.api.DisabledCommand;
 import me.sizableshrimp.jsb.args.Args;
 import me.sizableshrimp.jsb.data.BaseConfirmationContext;
 import me.sizableshrimp.jsb.util.MessageUtil;
@@ -41,36 +40,40 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-@DisabledCommand
 public class MovePageCommand extends ConfirmationCommand<MovePageCommand.ConfirmationContext> {
     public MovePageCommand() {
         super(Map.of(
-                Reactions.CHECKMARK, (confirmation, event) -> event.getMessage().flatMap(Message::getChannel).map(channel -> {
-                    String invalidMessage = getInvalidMessage(confirmation.wiki, confirmation.originalPage, confirmation.destinationPage);
+                Reactions.CHECKMARK, (confirmation, event) -> event.getChannel().flatMap(channel -> {
+                    String invalidMessage = getInvalidMessage(confirmation.wiki(), confirmation.originalPage(), confirmation.destinationPage());
                     if (invalidMessage != null)
                         return sendMessage(invalidMessage, channel);
 
-                    AReply reply = confirmation.wiki.move(confirmation.originalPage, confirmation.destinationPage, true, true,
-                            !confirmation.leaveRedirect, confirmation.reason /*+ " by " + MessageUtil.getUsernameDiscriminator(user)*/);
+                    return event.getClient().getUserById(confirmation.authorId()).flatMap(user -> {
+                        if (confirmation.wiki().exists(confirmation.destinationPage())) {
+                            confirmation.wiki().delete(confirmation.destinationPage(), String.format("Deleted to make way for move from \"[[%s]]\"", confirmation.wiki().normalizeTitle(confirmation.originalPage())));
+                        }
+                        AReply reply = confirmation.wiki().move(confirmation.originalPage(), confirmation.destinationPage(), true, true,
+                                !confirmation.leaveRedirect(), confirmation.reason() + " by " + MessageUtil.getUsernameDiscriminator(user));
 
-                    String message = MessageUtil.getMessageFromReply(reply,
-                            r -> "Moved " + confirmation.fullMessage,
-                            r -> "moving page " + confirmation.originalPage);
-                    return MessageUtil.sendMessage(message, channel);
+                        String message = MessageUtil.getMessageFromReply(reply,
+                                r -> "Moved " + confirmation.fullMessage(),
+                                r -> "moving page " + confirmation.originalPage());
+                        return sendMessage(message, channel);
+                    });
                 }), Reactions.X, (confirmation, event) -> event.getMessage().flatMap(Message::delete)
-                        .then(event.getChannel().flatMap(channel -> MessageUtil.sendMessage(String.format("Cancelling page move from **%s** to <%s>...",
-                                confirmation.originalPage, WikiUtil.getBaseWikiPageUrl(confirmation.wiki, confirmation.destinationPage)), channel)))
+                        .then(event.getChannel().flatMap(channel -> sendMessage(String.format("Cancelling page move from **%s** to <%s>...",
+                                confirmation.originalPage(), WikiUtil.getBaseWikiPageUrl(confirmation.wiki(), confirmation.destinationPage())), channel)))
         ), List.of(Reactions.CHECKMARK, Reactions.X));
     }
 
     @Override
-    public CommandInfo getInfo() {
+    public CommandInfo getInfo(CommandContext context) {
         return new CommandInfo(this, "%cmdname% <original page> <destination> [leave redirect <true|false>] [reason]", """
                 Moves a page from the original location to its destination, optionally leaving a redirect or not.
                 If the redirect parameter is omitted, it will default to `true`.
                 A reason can be optionally specified. If a reason is specified, leaving a redirect MUST be specified.
 
-                If any parameters have a space in their name, **wrap in quotes**.
+                If any parameters have a space in them, **wrap in quotes**.
                 """);
     }
 
@@ -92,56 +95,41 @@ public class MovePageCommand extends ConfirmationCommand<MovePageCommand.Confirm
     @Override
     public Mono<Message> run(CommandContext context, MessageCreateEvent event, Args args) {
         if (args.getLength() < 2) {
-            return incorrectUsage(event);
+            return incorrectUsage(context, event);
         }
 
         return event.getMessage().getChannel().flatMap(channel -> {
-            String originalPage = args.getArg(0);
-            String destinationPage = args.getArg(1);
+            String originalPage = context.wiki().normalizeTitle(args.getArg(0));
+            String destinationPage = context.wiki().normalizeTitle(args.getArg(1));
+            if (args.getLength() >= 3 && !args.isArgValidBoolean(2))
+                return incorrectUsage(String.format(Args.NO_BOOLEAN_MESSAGE, "leave redirect"), context, event);
             // If this was omitted (less than 3 args), always true.
             boolean leaveRedirect = args.getLength() < 3 || args.getArgAsBoolean(2);
-            String reason = args.getLength() >= 4 ? args.getArgRange(4) : null;
+            String reason = args.getLength() >= 4 ? args.getArgRange(3) : null;
             String parsedReason = reason == null ? "Move requested" : '"' + reason + '"';
 
-            String invalidMessage = getInvalidMessage(context.getWiki(), originalPage, destinationPage);
+            String invalidMessage = getInvalidMessage(context.wiki(), originalPage, destinationPage);
             if (invalidMessage != null)
                 return sendMessage(invalidMessage, channel);
 
-            String destinationUrl = WikiUtil.getBaseWikiPageUrl(context.getWiki(), destinationPage);
+            String destinationUrl = WikiUtil.getBaseWikiPageUrl(context.wiki(), destinationPage);
+            String preface = context.wiki().exists(destinationPage) && !originalPage.equalsIgnoreCase(context.wiki().resolveRedirect(destinationPage))
+                    ? String.format("**%s** already exists. Do you want to delete it and move", destinationPage)
+                    : "Do you want to move";
             String redirectMessage = leaveRedirect ? "while keeping a redirect" : "__without__ leaving a redirect";
             String reasonMessage = reason == null ? "" : " with reason \"" + reason + "\"";
-            String fullMessage = String.format("**%s** to <%s> %s%s", originalPage, destinationUrl, redirectMessage, reasonMessage);
-            return sendMessage("Do you want to move " + fullMessage + '?', channel)
-                    .flatMap(m -> addReactions(m, new ConfirmationContext(context.getWiki(), event.getMessage(), m, originalPage, destinationPage, leaveRedirect, parsedReason, fullMessage)));
+            String fullMessage = "**%s** to <%s> %s%s".formatted(originalPage, destinationUrl, redirectMessage, reasonMessage);
+            return sendMessage("%s **%s** to %s %s%s?".formatted(preface, originalPage, destinationUrl, redirectMessage, reasonMessage), channel)
+                    .flatMap(m -> addReactions(m, new ConfirmationContext(context.wiki(), event.getMessage(), m, originalPage, destinationPage, leaveRedirect, parsedReason, fullMessage)));
         });
     }
 
     private static String getInvalidMessage(Wiki wiki, String originalPage, String destinationPage) {
-        if (!wiki.exists(originalPage)) {
+        if (!wiki.exists(originalPage))
             return String.format("**%s** does not exist!", originalPage);
-        // Allow overwriting redirects if that redirect links to the page we are moving
-        } else if (wiki.exists(destinationPage) && originalPage.equalsIgnoreCase(wiki.resolveRedirect(destinationPage))) {
-            String link = WikiUtil.getBaseWikiPageUrl(wiki, destinationPage);
-            return String.format("**%s** already exists as <%s>.", destinationPage, link);
-        }
 
         return null;
     }
 
-    public static final class ConfirmationContext extends BaseConfirmationContext {
-        public final String originalPage;
-        public final String destinationPage;
-        public final boolean leaveRedirect;
-        public final String reason;
-        public final String fullMessage;
-
-        public ConfirmationContext(Wiki wiki, Message original, Message response, String originalPage, String destinationPage, boolean leaveRedirect, String reason, String fullMessage) {
-            super(wiki, original, response);
-            this.originalPage = originalPage;
-            this.destinationPage = destinationPage;
-            this.leaveRedirect = leaveRedirect;
-            this.reason = reason;
-            this.fullMessage = fullMessage;
-        }
-    }
+    public record ConfirmationContext(Wiki wiki, Message original, Message response, String originalPage, String destinationPage, boolean leaveRedirect, String reason, String fullMessage) implements BaseConfirmationContext {}
 }
